--- a/Update JS-Tools_0.1
+++ b/Update JS-Tools_0.1
@@ -9,6 +9,8 @@
 // @icon        https://www.google.com/s2/favicons?sz=64&domain=ameblo.jp
 // @noframes
 // @grant        none
+// @updateURL        https://github.com/personwritep/Update-JS-Tools/raw/main/Update JS-Tools.user.js
+// @downloadURL        https://github.com/personwritep/Update-JS-Tools/raw/main/Update JS-Tools.user.js
 // ==/UserScript==
 
 
